helm/manifests/seller-bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seller-bff
  template:
    metadata:
      labels:
        app: seller-bff
    spec:
      serviceAccountName: hacmieu-sa
      containers:
        - name: seller-bff
          image: caophi562005/vshop-seller-bff:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3200
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
