helm/manifests/seller-bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seller-bff-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/docs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:491333778094:certificate/f87c1c2e-bc45-4c3e-861d-f824abdc26c7
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: hacmieu-public
    alb.ingress.kubernetes.io/group.order: '10'
spec:
  ingressClassName: alb
  rules:
    - host: seller.vshop.hacmieu.com
      http:
        paths:
          - pathType: Prefix
            path: /api/v1
            backend:
              service:
                name: seller-bff
                port:
                  number: 3200
